# ghtui-rs

./: .envrc  AGENTS.md  Cargo.toml  LICENSE  README.md  prs.graphql
.config/: config.json5
.github/workflows/: cd.yml
src/: action.rs  app.rs  circuit_breaker.rs  colors.rs  components.rs  config.rs  event.rs  main.rs  mode.rs  providers.rs  thing.rs  things.rs  utils.rs
src/components/: command_palette.rs  fps.rs  home.rs  info_overlay.rs  keystrokes.rs  notifications.rs  pull_request.rs  pull_request_info_overlay.rs  pull_request_list.rs  repo_list.rs  thing_list.rs  utils.rs
src/github/: client.rs  traits.rs
src/github/queries/: pull_request_detail.graphql  pull_requests.graphql  pull_requests_summary.graphql
src/providers/: provider.rs  pull_requests.rs  random.rs
src/things/: pull_request.rs  thing.rs
